<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sample_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9CA0B6"
        tools:context=".Activities.CrimeActivity"
        tools:layout_editor_absoluteY="1dp">


        <Button
            android:id="@+id/showDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_border"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        </Button>

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:text="@string/year_month_day"
            app:layout_constraintBaseline_toBaselineOf="@+id/showDialogButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/crime_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="159dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_border"
            android:onClick="onSubmit"
            android:text="@string/submit_crime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reportEditText" />

        <EditText
            android:id="@+id/reportEditText"
            android:layout_width="0dp"
            android:layout_height="169dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Write your report.."
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_border"
            android:entries="@array/spinner_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crimeTypeText" />

        <TextView
            android:id="@+id/crimeTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/crime_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showDialogButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>